@@ -297,7 +297,10 @@ ignored_types <STRING>
 	Files found with an extension listed in this variable are denied on
 	upload, and ignored on rescan/postdel/etc. The list is comma-separated.
 	Defining a file with no extension can be done by starting the list
-	with a comma.
+	with a comma. The dot before the extension should not be added.
+	.diz, .message and .debug is normally generated by the zipscript, so
+	these types should be listed here. Also add types 3rd party scripts
+	commonly make, like .imdb, .html, .url, .m3u etc.
 	Default: ",diz,debug,message,imdb,html,url"
 
 allow_files_not_in_sfv <TRUE|FALSE>
