@@ -101,6 +101,7 @@ set variables(BAD_FILE_SFV)                 "%pf %releasename %u_name %g_name %f
 set variables(BAD_FILE_WRONGDIR)            "%pf %releasename %u_name %g_name %filename"
 set variables(BAD_FILE_YEAR)                "%pf %releasename %u_name %g_name %filename"
 set variables(BAD_FILE_ZIP)                 "%pf %releasename %u_name %g_name %filename"
+set variables(BAD_FILE_ZIPNFO)              "%pf %releasename %u_name %g_name %filename"
 set variables(BADBITRATE)                   "%pf %u_name %g_name %bitrate"
 set variables(BADGENRE)                     "%pf %u_name %g_name %genre"
 set variables(BADYEAR)                      "%pf %u_name %g_name %year"
