@@ -112,6 +112,7 @@
 #define bad_file_bitrate_type				"BAD_FILE_BITRATE"
 #define bad_file_disallowed_type			"BAD_FILE_DISALLOWED"
 #define bad_file_nfo_type				"BAD_FILE_DUPENFO"
+#define bad_file_zipnfo_type				"BAD_FILE_ZIPNFO"
 #define bad_file_speedtest_type				"ULTEST"
 
 
